# libff

./: .gitignore  .gitmodules  .ignore  BUILD.bazel  README.md  WORKSPACE
bzl/config/: BUILD.bazel  vars.bzl
bzl/tools/: user.bazelrc
libff/: BUILD.bazel
libff/algebra/curves/alt_bn128/: BUILD.bazel
libff/algebra/curves/bn128/: BUILD.bazel  bn128_g1.cpp  bn128_g1.hpp  bn128_g2.cpp  bn128_g2.hpp
libff/algebra/curves/bn382/: bn382_g1.cpp  bn382_g1.hpp  bn382_g2.cpp  bn382_g2.hpp  bn382_gt.cpp  bn382_gt.hpp  bn382_init.cpp  bn382_init.hpp  bn382_pairing.cpp  bn382_pairing.hpp  bn382_pp.cpp  bn382_pp.hpp  bn_utils.hpp
libff/algebra/curves/edwards/: BUILD.bazel
libff/algebra/curves/mnt/mnt4/: BUILD.bazel
libff/algebra/curves/mnt/mnt6/: BUILD.bazel
libff/algebra/curves/mnt753/: BUILD.bazel
libff/algebra/curves/tests/: BUILD.bazel  test_bilinearity.cpp  test_groups.cpp
libff/algebra/fields/: BUILD.bazel
libff/algebra/fields/tests/: BUILD.bazel  test_fields.cpp
libff/algebra/scalar_multiplication/: BUILD.bazel
libff/common/: BUILD.bazel
libff/common/default_types/: BUILD.bazel  ec_pp.hpp
scripts/: backend64.py  backend64_fp.py  backend64_fq.py  backend64_fq12.py  backend64_fq2.py  backend64_fq6.py  backend64_g.py
