load("@rules_cc//cc:defs.bzl", "cc_library")
load("@libff//bzl/config:vars.bzl", "CPPFLAGS", "DBINARY_OUTPUT", "DCURVE", "DDEBUG", "DMULTICORE", "DNO_PROCPS")

cc_library(
    name = "default_types",
    hdrs = [
        "ec_pp.hpp",
    ],
    copts = ["-I.", "-Iexternal/libff"] + CPPFLAGS,
    defines = DCURVE,
    visibility = ["//visibility:public"],
    deps = select({
        "@//:curve_bn128": ["//libff/algebra/curves/bn128"],
        "@//:curve_alt_bn128": ["//libff/algebra/curves/alt_bn128"],
        "@//:curve_edwards": ["//libff/algebra/curves/edwards"],
        "@//:curve_mnt4": ["//libff/algebra/curves/mnt/mnt4"],
        "@//:curve_mnt6": ["//libff/algebra/curves/mnt/mnt6"],
        "//conditions:default": []
    })
)
