load("@rules_cc//cc:defs.bzl", "cc_library")
load("@libff//bzl/config:vars.bzl", "CPPFLAGS", "DDEBUG", "DNO_PT_COMPRESSION")

cc_library(
    name = "edwards",
    srcs = [
        "edwards_g1.cpp",
        "edwards_g2.cpp",
        "edwards_init.cpp",
        "edwards_pairing.cpp",
        "edwards_pp.cpp",
    ],
    hdrs = [
        "edwards_g1.hpp",
        "edwards_g2.hpp",
        "edwards_init.hpp",
        "edwards_pairing.hpp",
        "edwards_pp.hpp",
    ],
    copts = ["-I."] + CPPFLAGS,
    local_defines = DDEBUG + DNO_PT_COMPRESSION,
    include_prefix = "libff/algebra/curves/edwards",
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//libff/common:profiling_hpp",
        "//libff/algebra/curves",
        "//libff/algebra/fields",
    ],
)
