load("@rules_cc//cc:defs.bzl", "cc_library")
load("@libff//bzl/config:vars.bzl", "CPPFLAGS", "DDEBUG", "DNO_PT_COMPRESSION")

cc_library(
    name = "mnt4",
    srcs = glob([
        "mnt4_g1.cpp",
        "mnt4_g2.cpp",
        "mnt4_init.cpp",
        "mnt4_pairing.cpp",
        "mnt4_pp.cpp",
    ]),
    hdrs = [
        "mnt4_g1.hpp",
        "mnt4_g2.hpp",
        "mnt4_init.hpp",
        "mnt4_pairing.hpp",
        "mnt4_pp.hpp",
    ],
    copts = ["-I."] + CPPFLAGS,
    local_defines = DDEBUG + DNO_PT_COMPRESSION,
    include_prefix = "libff/algebra/curves/mnt/mnt4",
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//libff/common:profiling_hpp",
        "//libff/algebra/curves",
        "//libff/algebra/curves/mnt",
    ],
)
